# barcode-generator-x86

./: -fsanitize=address  .gitignore  CMakeLists.txt  README.md  func.asm  func.lst  functions.asm  main.c  makefile  program  put_pixel.asm
